--- a/app/src/main/res/layout/content_navigation.xml
+++ b/app/src/main/res/layout/content_navigation.xml
@@ -163,13 +163,24 @@
     </ScrollView>
 
 
+    <ImageView
+        android:id="@+id/logo"
+        android:visibility="invisible"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:src="@drawable/logo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"/>
+
+
     <Button
         android:visibility="invisible"
         android:id="@+id/take_demo"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="120dp"
+        android:layout_below="@+id/logo"
+        android:layout_marginTop="30dp"
         android:layout_marginBottom="30dp"
         android:background="@drawable/button"
         android:textColor="@android:color/white"
@@ -182,7 +193,8 @@
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="220dp"
+        android:layout_below="@+id/take_demo"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="30dp"
         android:background="@drawable/button"
         android:textColor="@android:color/white"
@@ -190,7 +202,7 @@
 
 
     <RelativeLayout
-        android:visibility="visible"
+        android:visibility="invisible"
         android:id="@+id/layout"
         android:layout_width="260dp"
         android:layout_height="230dp"
